--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>music-review</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>musicreview Maven Webapp</name>
+  <name>Musicreview Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
   <parent>
